# meikipop

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  meikikai.macos.spec  pyproject.toml
.github/workflows/: build-dictionary.yml  build-macos.yml  pr-build.yml  release.yml
docs/: CUSTOM_OCR_PROVIDER.md
scripts/: build_install_macos.sh  render_dialog_contact_sheet.py  render_popup_sample.py
src/meikikai/: __init__.py  _version.py  main.py
src/meikikai/anki/: cards.py  connect.py  screenshot.py  worker.py
src/meikikai/config/: config.py
src/meikikai/dictionary/: customdict.py  lookup.py
src/meikikai/gui/: input.py  popup.py  region_selector.py  screen_ai_setup_dialog.py  settings_dialog.py  tray.py
src/meikikai/gui/design/: __init__.py  styles.py  tokens.py  widgets.py
src/meikikai/gui/popup_design/: tokens.py
src/meikikai/ocr/: hit_scan.py  interface.py  ocr.py
src/meikikai/ocr/providers/: postprocessing.py
src/meikikai/ocr/providers/dummy/: __init__.py  provider.py
src/meikikai/ocr/providers/glensv2/: provider.py
src/meikikai/ocr/providers/meikiocr/: __init__.py  provider.py
src/meikikai/resources/: app_icon.icns
src/meikikai/screenshot/: screenmanager.py
src/meikikai/scripts/: __init__.py  build_dictionary.py  import_yomitan_dict_html.py  import_yomitan_dict_text.py
src/meikikai/tts/: __init__.py  shortcuts.py  worker.py
src/meikikai/utils/: capture_state.py  lastest_queue.py  logger.py  paths.py
src/meikipop/config/: config.py
src/meikipop/gui/: input.py  popup.py  settings_dialog.py  tray.py
(+2 files in other folders)
