[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meikikai"
version = "1.0.1"
description = "Japanese OCR popup dictionary for macOS"
readme = "README.md"
license = "GPL-3.0"
authors = [
    {name = "hectahertz"}
]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.9.1",
    "pynput>=1.7.8",
    "mss>=10.0.0",
    "requests>=2.32.4",
    "Pillow>=11.2.1",
    "meikiocr>=0.3.4",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "lxml",
]
classifiers = [
    "Operating System :: MacOS :: MacOS X",
]

[project.scripts]
meikikai = "meikikai.main:main"

[project.entry-points."meikikai.scripts"]
build-dict = "meikikai.scripts.build_dictionary:main"
import-yomitan-dict-html = "meikikai.scripts.import_yomitan_dict_html:main"
import-yomitan-dict-text = "meikikai.scripts.import_yomitan_dict_text:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["meikikai*"]

[tool.setuptools.package-data]
meikikai = [
    "scripts/deconjugator.json",
    "resources/app_icon.icns",
    "resources/menubar_icon.png",
    "resources/menubar_icon.inactive.png",
]
